k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satelite-sensor-deployment
spec:
  clusterIP: None
  selector:
    app: satelite-sensor-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
