k8s/ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: satelite-sensor-ingress
#   annotations:
#     kubernetes.io/ingress.global-static-ip-name: "satelite-sensor-ip"
# spec:
#   backend:
#     serviceName: satelite-sensor-deployment
#     servicePort: 3000

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: satelite-sensor-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: satelite-sensor-ip
  labels:
    app: satelite-sensor-deployment
spec:
  backend:
    serviceName: satelite-sensor-service
    servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: satelite-sensor-service
  labels:
    app: satelite-sensor-deployment
spec:
  type: NodePort
  selector:
    app: satelite-sensor-deployment
    tier: web
  ports:
  - port: 3000
    targetPort: 3000
